fix: elasticsearch tunnel forwarding bug
